# VelogToGitBlog

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
Project1/: Category.ini  CategoryInfo.h  DirectoryParser.cpp  DirectoryParser.h  FileModifier.h  FileParser.cpp  FileParser.h  OptionAction.h  ParsedFileData.h  Project1.sln
Project1/Project1/: FileModifier.cpp  Main.cpp  OptionAction.cpp  OptionManager.cpp  OptionManager.h  Project1.vcxproj  Project1.vcxproj.filters
Project1/Source/: Chapter 2.md
